shop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.1.102 
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
    - port: 80
      targetPort: 80
      protocol: TCP
